# Game-dev-Course

./: .gitignore  CMakeLists.txt  README.md  config.h.in  makefile  setup.sh  sfml-app
include/: graphics.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/graphics/: create_program.cpp  create_shader.cpp  create_vertex_buffer_object.cpp  read_shader.cpp
src/graphics/shaders/: test_fragment.frag  test_vertex.vert
